fdo#66108 crash in PDF when using Helvetica font

When using Helvetica fonts with any character it supports outside Adobe
standard font encoding, PDF writer will force font fallback which we do
not support in Core Text and AquaSalGraphics will crash. With ATSUI we
do not crash, but no characters are output either.

This happens because PDF writer registers 14 “virtual” standard PDF
fonts, including Helvetica, and tries to use them if possible instead of
the real font.

Now the concept of standard fonts is obsolete, and Adobe now recommends
that all fonts are embedded in the PDF, so here I just disable that
mechanism when on Mac as a quick fix to avoid the crash, but eventually
this stuff should dropped entirely.

Change-Id: I3a4d8793d1d2124749372452ffa6ba3145dbd9cd
Reviewed-on: https://gerrit.libreoffice.org/4485
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>